--- a/asset/index.css
+++ b/asset/index.css
@@ -1,17 +1,22 @@
 .oxmod-headbar {
   /* CSS */
-  height: 32px;
+  height: 34px;
   background-color: #fff;
-  line-height: 32px;
+  line-height: 34px;
   text-align: center;
   color: #333;
   font-size: 16px;
   padding: 0 10px;
   font-weight: 700;
   box-shadow: 0 1px 1px #ccc;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.oxmod-headbar button {
+  padding: 0;
+  border: none;
 }
 .oxmod-headbar .bt-back {
-  border: none;
   background-color: transparent;
   color: #126aff;
   min-width: 30px;
@@ -31,11 +36,11 @@
   border: solid 2px #126aff;
   border-bottom: none;
   border-right: none;
-  width: 7px;
-  height: 7px;
+  width: 9px;
+  height: 9px;
   float: left;
   font-size: 0;
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
 }
 .oxmod-headbar .pageinfo {
   display: none;
@@ -72,10 +77,9 @@
   border-bottom: none;
 }
 .oxmod-headbar .bt-info {
-  border: none;
   background-color: transparent;
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   float: right;
   border-radius: 50%;
   border: solid 1px #126aff;
@@ -84,8 +88,9 @@
   font-family: serif;
   font-size: 14px;
   color: #126aff;
-  margin-top: 7px;
+  margin-top: 5px;
 }
-.oxmod-headbar .bt-info:focus .pageinfo {
+.oxmod-headbar .bt-info:focus .pageinfo,
+.oxmod-headbar .bt-info:hover .pageinfo {
   display: inline-block;
 }
