--- a/asset/index.css
+++ b/asset/index.css
@@ -1,91 +1,1 @@
-.oxmod-headbar {
-  /* CSS */
-  height: 32px;
-  background-color: #fff;
-  line-height: 32px;
-  text-align: center;
-  color: #333;
-  font-size: 16px;
-  padding: 0 10px;
-  font-weight: 700;
-  box-shadow: 0 1px 1px #ccc;
-}
-.oxmod-headbar .bt-back {
-  border: none;
-  background-color: transparent;
-  color: #126aff;
-  min-width: 30px;
-  font-size: 15px;
-  float: left;
-  height: 30px;
-  margin: 1px;
-  line-height: 30px;
-  padding: 0;
-  padding-left: 15px;
-}
-.oxmod-headbar .bt-back:before {
-  content: '';
-  margin-left: -12px;
-  margin-top: 2px;
-  font-weight: 700;
-  border: solid 2px #126aff;
-  border-bottom: none;
-  border-right: none;
-  width: 7px;
-  height: 7px;
-  float: left;
-  font-size: 0;
-  transform: rotate(-45deg);
-}
-.oxmod-headbar .pageinfo {
-  display: none;
-  position: absolute;
-  width: 140px;
-  padding: 5px 10px;
-  font-size: 12px;
-  line-height: 1.4;
-  margin-left: -140px;
-  margin-top: 26px;
-  background-color: #fff;
-  z-index: 3;
-  border: solid 1px #ccc;
-  color: #666;
-}
-.oxmod-headbar .pageinfo em {
-  font-weight: 400;
-  display: inline-block;
-  width: 100%;
-  font-style: normal;
-  text-align: left;
-}
-.oxmod-headbar .pageinfo:before {
-  content: '';
-  width: 10px;
-  height: 10px;
-  background-color: #fff;
-  position: absolute;
-  left: 136px;
-  top: -6px;
-  border: solid 1px #ccc;
-  transform: rotate(45deg);
-  border-right: none;
-  border-bottom: none;
-}
-.oxmod-headbar .bt-info {
-  border: none;
-  background-color: transparent;
-  width: 20px;
-  height: 20px;
-  float: right;
-  border-radius: 50%;
-  border: solid 1px #126aff;
-  font-style: italic;
-  font-weight: 700;
-  font-family: serif;
-  font-size: 14px;
-  color: #126aff;
-  margin-top: 7px;
-}
-.oxmod-headbar .bt-info:focus .pageinfo {
-  display: inline-block;
-}
+@font-face{font-family:headmenu-iconfont;src:url(//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.eot);src:url(//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.eot?#iefix) format('embedded-opentype'),url(//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.woff) format('woff'),url(//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.ttf) format('truetype'),url(//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.svg#headmenu-iconfont) format('svg')}.oxmod-headbar{-webkit-tap-highlight-color:none}.oxmod-headbar nav{height:50px;line-height:50px;box-shadow:0 1px 2px #eee;position:relative}.oxmod-headbar img{max-height:40px;max-width:200px;margin:0 5px;vertical-align:middle}.oxmod-headbar .menu{float:right;height:50px}.oxmod-headbar .icon-menu{font-family:headmenu-iconfont;font-size:32px;display:inline-block;vertical-align:0;background:0 0;border:none;width:auto;padding:0;margin:0;height:50px;width:50px;line-height:50px;transition:all .3s;outline:0;-webkit-tap-highlight-color:none}.oxmod-headbar .opened .list{transform:scale(1);opacity:1}.oxmod-headbar .opened .icon-menu{text-shadow:0 1px 1px #999}.oxmod-headbar .list{transform:scale(0);transform-origin:100% 0;opacity:0;transition:all .3s;line-height:40px;position:absolute;z-index:10;left:0;width:100%;background-color:#ececec;overflow:hidden;top:50px}.oxmod-headbar .list>li{border-bottom:solid 1px #dcdcdc;text-indent:.8em;font-size:15px}.oxmod-headbar .list>li>a{display:inline-block;width:100%}.oxmod-headbar .list a{color:#333}.oxmod-headbar .opened .icon-menu{background-color:#ececec}.oxmod-headbar sub{color:#999;font-weight:300;font-size:12px}
