--- a/asset/index.less
+++ b/asset/index.less
@@ -1,103 +1,95 @@
-@textColor:#126aff;
+@font-face {
+  font-family: 'headmenu-iconfont';  /* project id 585906 */
+  src: url('//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.eot');
+  src: url('//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.woff') format('woff'),
+  url('//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_585906_916r807fdnmw8kt9.svg#headmenu-iconfont') format('svg');
+}
 .oxmod-headbar{
 /* CSS */
-  height:32px;
-  background-color: #fff;
-  line-height: 32px;
-  text-align: center;
-  color:#333;
-  font-size:16px;
-  padding:0 10px;
-  font-weight: 700;
-  box-shadow: 0 1px 1px #ccc;
-  .bt-back{
-    border: none;
-    background-color: transparent;
-    color:@textColor;
-    min-width: 30px;
-    font-size:15px;
-    float:left;
-    height:30px;
-    margin:1px;
-    line-height: 30px;
-    padding:0;
-    padding-left:15px;
-
-
-    &:before{
-      content: '';
-      //display: inline-block;
-      margin-left:-12px;
-      margin-top:2px;
-
-      font-weight: 700;
-      border:solid 2px @textColor;
-      border-bottom: none;
-      border-right:none;
-
-      width:7px;
-      height: 7px;
-
-      float: left;
-      font-size:0;
-
-      transform: rotate(-45deg);
-    }
+  -webkit-tap-highlight-color:none;
+  nav{
+    height: 50px;
+    line-height: 50px;
+    //background-color: rgba(0,0,0,.8);
+    box-shadow: 0 1px 2px #eee;   
+    position: relative;
   }
-  .pageinfo{
-    display: none;
-    position: absolute;
-    width:140px;
-    padding:5px 10px;
-    font-size:12px;
-    line-height: 1.4;
-    margin-left:-140px;
-    margin-top:26px;
-    background-color: #fff;
-    z-index: 3;
-    border:solid 1px #ccc;
-    color:#666;
-    em{
-      font-weight: 400;
-      display: inline-block;
-      width:100%;
-      font-style: normal;
-      text-align: left;
-    }
-    &:before{
-      content:'';
-      width:10px;
-      height:10px;
-      background-color: #fff;
-      position: absolute;
-      left:136px;
-      top:-6px;
-      border:solid 1px #ccc;
-      transform: rotate(45deg);
-      border-right:none;
-      border-bottom: none;
-    }
+  img{
+    max-height: 40px;
+    max-width: 200px;
+    margin:0 5px;
+    vertical-align: middle;
   }
-  .bt-info{
-
-    border: none;
-    background-color: transparent;
-    width:20px;
-    height:20px;
+  .menu{
     float: right;
-    border-radius: 50%;
-    border:solid 1px @textColor;
-    font-style: italic;
-    font-weight: 700;
-    font-family: serif;
-    font-size:14px;
-    color:@textColor;
-    margin-top:7px;
-    //box-shadow:  1px 1px 1px #eee;
-    &:focus{
-      .pageinfo{
+    height: 50px;
+  }
+  .icon-menu{
+    font-family: 'headmenu-iconfont';
+    //color:#666;
+    font-size: 32px;
+    display: inline-block;
+    vertical-align: 0;
+    background:transparent;
+    border:none;
+    width:auto;
+    padding:0;
+    margin:0;
+    height: 50px;
+    width:50px;
+    line-height: 50px;
+    transition: all .3s;
+    outline: none;
+    -webkit-tap-highlight-color:none;
+
+  }
+  .opened{
+    .list{
+      transform: scale(1);
+      opacity: 1;
+    }
+    .icon-menu{
+      text-shadow:0 1px 1px #999;
+    }
+  }
+  .list{
+    transform: scale(0);
+    transform-origin: 100% 0;
+
+    opacity: 0;
+    transition: all .3s;
+    line-height: 40px;
+    position: absolute;
+    z-index: 10;
+    //margin-top:-8px;
+    left:0;
+    width:100%;
+    background-color: #ececec;
+    overflow: hidden;
+    top:50px;
+    >li{
+      border-bottom: solid 1px #dcdcdc;
+      text-indent: .8em;
+      font-size: 15px;
+      >a{
         display: inline-block;
+        width:100%;
       }
     }
+    a{
+      color:#333;
+    }
   }
-}
+  .opened{
+    .icon-menu{
+      background-color: #ececec;
+    }
+  }
+  sub{
+    color:#999;
+    font-weight:300;
+    font-size: 12px;
+  }
+ }
